Scrollyteller almost working

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-test-renderer": "^16.13.1"
   },
   "dependencies": {
+    "@abcnews/scrollyteller": "^1.4.4",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
   }
