Install inline svg support

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@abcnews/scrollyteller": "^1.4.4",
     "d3-scale": "^3.2.1",
     "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react-dom": "^16.13.1",
+    "react-inlinesvg": "^1.2.0"
   }
 }
