--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
     "d3-scale": "^3.2.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-inlinesvg": "^1.2.0",
-    "react-keyshape": "^3.3.0"
+    "react-inlinesvg": "^1.2.0"
   }
 }
