--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/node": "^14.0.1",
     "d3-scale": "^3.2.1",
     "react": "^16.13.1",
+    "react-device-detect": "^1.12.1",
     "react-dom": "^16.13.1",
     "react-inlinesvg": "^1.2.0"
   }
