--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@react-hook/window-size": "^2.0.5",
     "@types/node": "^14.0.1",
     "d3-scale": "^3.2.1",
+    "jankdefer": "^1.0.2",
     "lodash": "^4.17.15",
     "react": "^16.13.1",
     "react-device-detect": "^1.12.1",
