--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-	"name": "interactive-scrollout",
+	"name": "interactive-virus-vaccine",
 	"version": "1.0.0",
-	"description": "A project generated from aunty's react project template.",
+	"description": "An ABC News Story Lab article about coronavirus and vaccines",
 	"license": "MIT",
 	"private": true,
 	"contributors": [
